--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^5.16.14",
+    "@mui/material": "^5.16.14",
     "next": "^13.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.0"
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "postcss-nesting": "^13.0.1",
+    "tailwindcss": "^4.0.0"
   }
 }
