--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/postcss": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
+    "postcss-import": "^14.1.0",
     "postcss-nesting": "^13.0.1",
     "tailwindcss": "^4.0.0"
   }
