--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "next": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+    "@tailwindcss/postcss7-compat": "^2.2.19",
+    "postcss": "^7.0.39",
+    "autoprefixer": "^9.8.8",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.19"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.0",
