--- a/package.json
+++ b/package.json
@@ -15,18 +15,14 @@
     "@mui/material": "^5.16.14",
     "next": "^13.4.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
     "@tailwindcss/postcss7-compat": "^2.2.19",
     "postcss": "^7.0.39",
     "autoprefixer": "^9.8.8",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.19"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.5.1",
     "postcss-import": "^14.1.0",
-    "postcss-nesting": "^13.0.1",
-    "tailwindcss": "^4.0.0"
+    "postcss-nesting": "^7.0.1"
   }
 }
