--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.16.14",
     "@mui/material": "^5.16.14",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
+    "autoprefixer": "^9.8.8",
+    "dotenv": "^16.4.7",
+    "dotenv-cli": "^8.0.0",
     "next": "^13.4.0",
+    "openai": "^4.0.0",
+    "pg": "^8.13.1",
+    "postcss": "^7.0.39",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tailwindcss/postcss7-compat": "^2.2.17",
-    "postcss": "^7.0.39",
-    "openai": "^4.0.0",
-    "pg": "^8.x.x",
-    "autoprefixer": "^9.8.8",
+    "react-icons": "^5.4.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "devDependencies": {
